# jadebug

./: .gitignore  LICENSE  Makefile  README.md  jadebug.py  pyproject.toml
jadebug/: connect.py  event.py  field.py  header.py  packages.py
src/jadebug/: __init__.py
tests/: test_connection.py
