[project]
name = "jadebug"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Thiago Chaves", email = "8999197+thiagochaves@users.noreply.github.com" }
]
dependencies = ["textual~=0.24.1"]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest~=7.3.1", "mypy~=1.2.0", "ruff~=0.0.265"]
